2010-08-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-start.el (gnus-start-draft-setup): Make it interactive.

2010-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-encode): Use utf-8 as a last resort if
	determining charset of text fails.

2010-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-get-new-mail-1): Revert.

	* nnml.el (nnml-active-number): Make sure names of newly created groups
	in nnml-group-alist are encoded.

2010-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-get-new-mail-1): Encode group names possibly
	containing non-ASCII characters in active file for nnml back end.

2010-07-24  David Engster  <dengste@eml.cc>

	* mml-smime.el (mml-smime-epg-verify): Also accept the older
	x-pkcs7-signature MIME type as signature (RFC 2311, C.1).

2010-07-21  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-parse-1): Collect "certfile" attributes in "<#secure>"
	tag (Bug#6654).

2010-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-bookmark-make-record): Bookmark position in
	the article buffer, not the summary buffer.

2010-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-bookmark-make-record): Make it work for
	Emacs 23 as well.

2010-07-13  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	Allow C-w when setting a bookmark in a Gnus Article buffer (Bug#5975).
	Patch applied by Karl Fogel.

	* gnus-sum.el (gnus-summary-bookmark-make-record): Set
	`bookmark-yank-point' and `bookmark-current-buffer' to allow C-w.

2010-07-13  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	Allow bookmarks to be set from Gnus Article buffers (Bug #5975).
	Patch applied (with minor tweaks) by Karl Fogel.  Note this leaves
	C-w still not working correctly from Article buffers; Thierry's
	patch to fix that will be applied after this.

	* gnus-art.el (bookmark-make-record-function): New local variable.

	* gnus-sum.el (gnus-summary-bookmark-make-record): Allow setting from