@@ -661,10 +661,10 @@ necessary."
   "Determines if a group name should be followed.
 Consults `gnus-registry-unfollowed-groups' and
 `nnmail-split-fancy-with-parent-ignore-groups'."
-  (not (or (gnus-registry-grep-in-list
+  (not (or (gnus-grep-in-list
 	    group
 	    gnus-registry-unfollowed-groups)
-	   (gnus-registry-grep-in-list
+	   (gnus-grep-in-list
 	    group
 	    nnmail-split-fancy-with-parent-ignore-groups))))
 
@@ -744,14 +744,6 @@ Consults `gnus-registry-unfollowed-groups' and
        (mail-header-from (gnus-data-header
 			  (assoc article (gnus-data-list nil)))))
     nil))
-
-(defun gnus-registry-grep-in-list (word list)
-"Find if a WORD matches any regular expression in the given LIST."
-  (when (and word list)
-    (catch 'found
-      (dolist (r list)
-	(when (string-match r word)
-	  (throw 'found r))))))
 
 (defun gnus-registry-do-marks (type function)
   "For each known mark, call FUNCTION for each cell of type TYPE.
